--- a/.github/workflows/AT3LM.yml
+++ b/.github/workflows/AT3LM.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Connecting to your Ngrok account.
       run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+        NGROK_AUTH_TOKEN: 21YrxxXmOwyAFSR3QJilORnY31O_2cpgzpDaKPvtm5XaG7uUy
     - name: Activating RDP access.
       run: |
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
